--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./popup.css">
+    <link rel="stylesheet" href="./styles/popup.css">
 </head>
 <body>
     <div class="header">
@@ -47,6 +47,6 @@
     <div class="footer">
         teste
     </div>
-    <script src="popup.js"></script>
+    <script src="./js/popup.js"></script>
 </body>
 </html>
