--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 
     <div class="footer">
         <div class="footer-description">
-
+            <p>Desenvolvido pelo</p>
+            <img src="./img/7h30.png" alt="7h30">
         </div>
         <div class="footer-notifications">
             <div class="form-check form-switch" id="notifications-toggle">
